Remove check to see if pr is targeting release, to test.

--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -33,6 +33,7 @@ spec:
             when {
                 anyOf {
                     allOf { 
+                        changeRequest()
                         branch pattern: "(feature|hotfix)/.*", comparator: 'REGEXP'
                     }
                     allOf { 
