Testing with github plugin vs git.

--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -32,7 +32,10 @@ spec:
         stage('Make Image') {
             when {
                 anyOf {
-                    changeRequest target: 'release'
+                    allOf { 
+                        changeRequest target: 'release'
+                        branch pattern: "(feature|hotfix)/.*", comparator: 'REGEXP'
+                    }
                     allOf { 
                         not {
                             changeRequest()
