--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -29,13 +29,14 @@ spec:
         }
     }
     stages {
-        stage('Make Image') {
+        boolean buildCompleted = false
+        stage('Build Image') {
             when {
                 anyOf {
                     allOf { 
-                        changeRequest target: 'release'
+                        changeRequest target: 'master'
                         anyOf {
-                           changeRequest branch: 'develop', comparator: 'REGEXP'
+                           changeRequest branch: 'release', comparator: 'REGEXP'
                            changeRequest branch: 'hotfix/.*', comparator: 'REGEXP'
                         }
                     }
@@ -72,21 +73,144 @@ spec:
                 //    
                 }
                 container(name: 'kaniko', shell: '/busybox/sh') {   
-                    sh '''#!/busybox/sh
-                    TAG=$(cat SHA_TAG)
-                    VERSION="$(cat VERSION)-rc"
-                    VERSION_ALT="$(cat VERSION)-rc${BUILD_NUMBER}"
 
-                    /kaniko/executor \
-                    --context=dir://${CONTEXT} \
-                    --dockerfile=${DOCKERFILE} \
-                    --destination=${REGISTRY}/${IMAGE}:${TAG} \
-                    --destination=${REGISTRY}/${IMAGE}:${VERSION} \
-                    --destination=${REGISTRY}/${IMAGE}:${VERSION_ALT} \
-                    --destination=${REGISTRY}/${IMAGE}:${LATEST_TAG}
-                    '''
+                    try{
+                        sh '''#!/busybox/sh
+                        TAG=$(cat SHA_TAG)
+                        VERSION="$(cat VERSION)-rc"
+                        VERSION_ALT="$(cat VERSION)-rc${BUILD_NUMBER}"
+
+                        /kaniko/executor \
+                        --context=dir://${CONTEXT} \
+                        --dockerfile=${DOCKERFILE} \
+                        --destination=${REGISTRY}/${IMAGE}:${TAG} \
+                        --destination=${REGISTRY}/${IMAGE}:${VERSION} \
+                        --destination=${REGISTRY}/${IMAGE}:${VERSION_ALT} \
+                        --destination=${REGISTRY}/${IMAGE}:${LATEST_TAG}
+                        '''
+                        buildCompleted = true
+                    }catch (Exception e){
+                        buildCompleted = false
+                    }
                 }
             }
         }
+
+        stage('Deploy: Dev') {
+            when {
+                allOf { 
+                    not {
+                        changeRequest()
+                    }
+                    branch 'develop'
+                }
+            }
+            environment {
+                REGISTRY        = '771502366784.dkr.ecr.us-east-2.amazonaws.com'
+                IMAGE           = 'favorite-beer'
+                LATEST_TAG      = 'latest'
+            }
+            steps {
+                container('tools'){               
+                    echo "Deploy ${REGISTRY}/${IMAGE}:$(cat VERSION)-rc${BUILD_NUMBER} to Dev Environment"
+                }
+            }
+        }
+
+        stage('Deploy: Test') {
+            when {
+                anyOf {
+                    allOf { 
+                        not {
+                            changeRequest()
+                        }
+                        branch 'release'
+                    }
+                    allOf { 
+                        changeRequest target: 'master'
+                        anyOf {
+                           changeRequest branch: 'hotfix/.*', comparator: 'REGEXP'
+                        }
+                    }
+                }
+            }
+            environment {
+                REGISTRY        = '771502366784.dkr.ecr.us-east-2.amazonaws.com'
+                IMAGE           = 'favorite-beer'
+                LATEST_TAG      = 'latest'
+            }
+            steps {
+                container('tools'){               
+                    echo "Deploy ${REGISTRY}/${IMAGE}:$(cat VERSION)-rc${BUILD_NUMBER} to Test Environment"
+                }
+            }
+        }
+
+        stage('Tag Release Candidate') {
+            when {
+                allOf { 
+                    changeRequest target: 'master'
+                    anyOf {
+                       changeRequest branch: 'release', comparator: 'REGEXP'
+                    }
+                }
+            }
+            environment {
+                REGISTRY        = '771502366784.dkr.ecr.us-east-2.amazonaws.com'
+                IMAGE           = 'favorite-beer'
+                LATEST_TAG      = 'latest'
+            }
+            steps {
+                container('tools'){               
+                    echo "Tag Release Candidate Version: $(cat VERSION)-rc${BUILD_NUMBER}"
+                }
+            }
+        }  
+
+        stage('Tag Hotfix') {
+            when {
+                allOf { 
+                    changeRequest target: 'master'
+                    anyOf {
+                       changeRequest branch: 'hotfix/.*', comparator: 'REGEXP'
+                    }
+                }
+            }
+            environment {
+                REGISTRY        = '771502366784.dkr.ecr.us-east-2.amazonaws.com'
+                IMAGE           = 'favorite-beer'
+                LATEST_TAG      = 'latest'
+            }
+            steps {
+                container('tools'){               
+                    echo "Tag Hotfix Version: $(cat VERSION)-hotfix${BUILD_NUMBER}"
+                }
+            }
+        }  
+
+        stage('Deploy: Prod') {
+            when {
+                allOf { 
+                    not {
+                        changeRequest()
+                    }
+                    branch 'master'
+                }
+            }
+            environment {
+                REGISTRY        = '771502366784.dkr.ecr.us-east-2.amazonaws.com'
+                IMAGE           = 'favorite-beer'
+                LATEST_TAG      = 'latest'
+            }
+            steps {
+                container('tools'){               
+                    echo "Promote ${REGISTRY}/${IMAGE}:$(cat VERSION) to Prod Registry"
+                    echo "Deploy ${IMAGE}:$(cat VERSION) to Prod Environment"
+                    echo "Down-Merge Master into Release, bump Release version no suffix [skip ci]"
+
+                }
+            }
+        }
+
     }
 }
