--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -112,7 +112,7 @@ spec:
             }
             steps {
                 container('tools'){               
-                    echo "Deploy ${REGISTRY}/${IMAGE}:$(cat VERSION)-rc${BUILD_NUMBER} to Dev Environment"
+                    echo "Deploy ${REGISTRY}/${IMAGE}:\$(cat VERSION)-rc${BUILD_NUMBER} to Dev Environment"
                 }
             }
         }
@@ -141,7 +141,7 @@ spec:
             }
             steps {
                 container('tools'){               
-                    echo "Deploy ${REGISTRY}/${IMAGE}:$(cat VERSION)-rc${BUILD_NUMBER} to Test Environment"
+                    echo "Deploy ${REGISTRY}/${IMAGE}:\$(cat VERSION)-rc${BUILD_NUMBER} to Test Environment"
                 }
             }
         }
@@ -162,7 +162,7 @@ spec:
             }
             steps {
                 container('tools'){               
-                    echo "Tag Release Candidate Version: $(cat VERSION)-rc${BUILD_NUMBER}"
+                    echo "Tag Release Candidate Version: \$(cat VERSION)-rc${BUILD_NUMBER}"
                 }
             }
         }  
@@ -183,7 +183,7 @@ spec:
             }
             steps {
                 container('tools'){               
-                    echo "Tag Hotfix Version: $(cat VERSION)-hotfix${BUILD_NUMBER}"
+                    echo "Tag Hotfix Version: \$(cat VERSION)-hotfix${BUILD_NUMBER}"
                 }
             }
         }  
@@ -204,8 +204,8 @@ spec:
             }
             steps {
                 container('tools'){               
-                    echo "Promote ${REGISTRY}/${IMAGE}:$(cat VERSION) to Prod Registry"
-                    echo "Deploy ${IMAGE}:$(cat VERSION) to Prod Environment"
+                    echo "Promote ${REGISTRY}/${IMAGE}:\$(cat VERSION) to Prod Registry"
+                    echo "Deploy ${IMAGE}:\$(cat VERSION) to Prod Environment"
                     echo "Down-Merge Master into Release, bump Release version no suffix [skip ci]"
 
                 }
