Changes to how PRs are handled.

--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -63,7 +63,7 @@ spec:
                 LATEST_TAG      = 'latest'
                 TAG             = sh(script: 'git rev-parse HEAD', returnStdout: true).trim()
                 VERSION         = sh(script: 'cat VERSION', returnStdout: true).trim()
-                VERSION_SUFFIX  = sh(script: 'echo -n ${BRANCH_NAME}', returnStdout: true).trim()
+                VERSION_SUFFIX  = sh(script: 'if [[ -z "${CHANGE_BRANCH}" ]]; then echo -n ${BRANCH_NAME}; else echo -n ${CHANGE_BRANCH}; fi;', returnStdout: true).trim()
                 VERSION_ALT     = "${VERSION}-${VERSION_SUFFIX}${BUILD_NUMBER}"
             }
             steps {
@@ -142,7 +142,7 @@ spec:
                 IMAGE           = 'favorite-beer'
                 LATEST_TAG      = 'latest'
                 VERSION         = sh(script: 'cat VERSION', returnStdout: true).trim()
-                VERSION_SUFFIX  = sh(script: 'echo -n ${BRANCH_NAME}', returnStdout: true).trim()
+                VERSION_SUFFIX  = sh(script: 'if [[ -z "${CHANGE_BRANCH}" ]]; then echo -n ${BRANCH_NAME}; else echo -n ${CHANGE_BRANCH}; fi;', returnStdout: true).trim()
             }
             steps {
                 container('tools'){               
@@ -165,7 +165,7 @@ spec:
                 IMAGE           = 'favorite-beer'
                 LATEST_TAG      = 'latest'
                 VERSION         = sh(script: 'cat VERSION', returnStdout: true).trim()
-                VERSION_SUFFIX  = sh(script: 'echo -n ${BRANCH_NAME}', returnStdout: true).trim()
+                VERSION_SUFFIX  = sh(script: 'if [[ -z "${CHANGE_BRANCH}" ]]; then echo -n ${BRANCH_NAME}; else echo -n ${CHANGE_BRANCH}; fi;', returnStdout: true).trim()
             }
             steps {
                 container('tools'){               
@@ -188,7 +188,7 @@ spec:
                 IMAGE           = 'favorite-beer'
                 LATEST_TAG      = 'latest'
                 VERSION         = sh(script: 'cat VERSION', returnStdout: true).trim()
-                VERSION_SUFFIX  = sh(script: 'echo -n ${BRANCH_NAME}', returnStdout: true).trim()
+                VERSION_SUFFIX  = sh(script: 'if [[ -z "${CHANGE_BRANCH}" ]]; then echo -n ${BRANCH_NAME}; else echo -n ${CHANGE_BRANCH}; fi;', returnStdout: true).trim()
             }
             steps {
                 container('tools'){               
