--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -39,7 +39,6 @@ spec:
     stages {
         stage('Build Image') {
             when {
-                environment name: 'ExecuteAction', value: 'plan'
                 anyOf {
                     allOf { 
                         changeRequest target: 'master'
@@ -51,6 +50,8 @@ spec:
                     allOf { 
                         not {
                             changeRequest()
+                        }
+                        not {
                             expression {
                                 isMergeCommit(env.GIT_COMMIT)
                             }
