--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -6,6 +6,13 @@ def isMergeCommit(String commit) {
   return isSimpleCommit == "0"
 }
 
+def buildSuffix(String branch) {
+  if(branch == "develop"){
+    return "dev"
+  }
+  return "-rc"
+}
+
 pipeline {
     agent {
         kubernetes {
@@ -37,17 +44,7 @@ spec:
         }
     }
     stages {
-        stage('Skip CI'){
-            when {
-                changelog '\\[skip ci\\]'
-            }
-            steps {
-                script {
-                    currentBuild.result = 'ABORTED'
-                    return
-                }
-            }
-        }
+
         stage('CICD') {
             when {
                 not {
@@ -60,9 +57,7 @@ spec:
                         anyOf {
                             allOf { 
                                 changeRequest target: 'master'
-                                anyOf {
-                                   changeRequest branch: 'hotfix/.*', comparator: 'REGEXP'
-                                }
+                                changeRequest branch: 'hotfix/.*', comparator: 'REGEXP'
                             }
                             allOf { 
                                 not {
@@ -86,7 +81,7 @@ spec:
                         LATEST_TAG      = 'latest'
                         TAG             = sh(script: 'git rev-parse HEAD', returnStdout: true).trim()
                         VERSION         = sh(script: 'cat VERSION', returnStdout: true).trim()
-                        VERSION_SUFFIX  = sh(script: 'if [[ -z "${CHANGE_BRANCH}" ]]; then echo -n ${BRANCH_NAME}; else echo -n ${CHANGE_BRANCH}; fi;', returnStdout: true).trim()
+                        VERSION_SUFFIX  = buildSuffix(sh(script: 'if [[ -z "${CHANGE_BRANCH}" ]]; then echo -n ${BRANCH_NAME}; else echo -n ${CHANGE_BRANCH}; fi;', returnStdout: true).trim())
                         VERSION_ALT     = "${VERSION}-${VERSION_SUFFIX}${BUILD_NUMBER}"
                     }
                     steps {
@@ -163,7 +158,7 @@ spec:
                         REGISTRY        = '771502366784.dkr.ecr.us-east-2.amazonaws.com'
                         IMAGE           = 'favorite-beer'
                         VERSION         = sh(script: 'cat VERSION', returnStdout: true).trim()
-                        VERSION_SUFFIX  = sh(script: 'if [[ -z "${CHANGE_BRANCH}" ]]; then echo -n ${BRANCH_NAME}; else echo -n ${CHANGE_BRANCH}; fi;', returnStdout: true).trim()
+                        VERSION_SUFFIX  = buildSuffix(sh(script: 'if [[ -z "${CHANGE_BRANCH}" ]]; then echo -n ${BRANCH_NAME}; else echo -n ${CHANGE_BRANCH}; fi;', returnStdout: true).trim())
                     }
                     steps {
                         container('tools'){               
@@ -185,7 +180,7 @@ spec:
                         REGISTRY        = '771502366784.dkr.ecr.us-east-2.amazonaws.com'
                         IMAGE           = 'favorite-beer'
                         VERSION         = sh(script: 'cat VERSION', returnStdout: true).trim()
-                        VERSION_SUFFIX  = sh(script: 'if [[ -z "${CHANGE_BRANCH}" ]]; then echo -n ${BRANCH_NAME}; else echo -n ${CHANGE_BRANCH}; fi;', returnStdout: true).trim()
+                        VERSION_SUFFIX  = buildSuffix(sh(script: 'if [[ -z "${CHANGE_BRANCH}" ]]; then echo -n ${BRANCH_NAME}; else echo -n ${CHANGE_BRANCH}; fi;', returnStdout: true).trim())
                     }
                     steps {
                         container('tools'){               
@@ -207,7 +202,7 @@ spec:
                         REGISTRY        = '771502366784.dkr.ecr.us-east-2.amazonaws.com'
                         IMAGE           = 'favorite-beer'
                         VERSION         = sh(script: 'cat VERSION', returnStdout: true).trim()
-                        VERSION_SUFFIX  = sh(script: 'if [[ -z "${CHANGE_BRANCH}" ]]; then echo -n ${BRANCH_NAME}; else echo -n ${CHANGE_BRANCH}; fi;', returnStdout: true).trim()
+                        VERSION_SUFFIX  = buildSuffix(sh(script: 'if [[ -z "${CHANGE_BRANCH}" ]]; then echo -n ${BRANCH_NAME}; else echo -n ${CHANGE_BRANCH}; fi;', returnStdout: true).trim())
                     }
                     steps {
                         container('tools'){               
@@ -241,5 +236,18 @@ spec:
                 }
             }
         }
+
+        stage('Skip CI'){
+            when {
+                changelog '\\[skip ci\\]'
+            }
+            steps {
+                script {
+                    currentBuild.result = 'ABORTED'
+                    return
+                }
+            }
+        }
+
     }
 }
